[project]
name = "charz"
dynamic = ["version"]
description = "An object oriented terminal game engine"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "linflex~=0.1.3",
    "colex~=0.2.0",
    "keyboard~=0.13.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
]

[tool.hatch.version]
path = "charz/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["charz"]
